[lworld] Reflective method invocation fails with assert(sender_sp != sp()) failed: must have changed

XMLWordPrintable

      # Internal Error (/oracle/valhallaL/open/src/hotspot/cpu/x86/frame_x86.cpp:503), pid=13441, tid=13443
      # assert(sender_sp != sp()) failed: must have changed

      Stack: [0x00007f8fa4329000,0x00007f8fa4429000], sp=0x00007f8fa44269f0, free space=1014k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xc69d38] frame::sender_for_compiled_frame(RegisterMap*) const+0x3e8
      V [libjvm.so+0xc69f78] frame::sender(RegisterMap*) const+0x158
      V [libjvm.so+0x190a34e] JavaThread::nmethods_do(CodeBlobClosure*)+0xde
      V [libjvm.so+0x19134a9] Threads::possibly_parallel_threads_do(bool, ThreadClosure*)+0x129
      V [libjvm.so+0x165e240] ParallelSPCleanupTask::work(unsigned int)+0x30
      V [libjvm.so+0x1a7cd70] GangWorker::loop()+0xe0
      V [libjvm.so+0x19174ab] Thread::call_run()+0xfb
      V [libjvm.so+0x14e4585] thread_native_entry(Thread*)+0x115

            Assignee:
            Roland Westrelin
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: