8224211: [lworld] Reflective method invocation fails with assert(sender_sp != sp()) failed: must have changed

Reviewed-by: thartmann